# DiffAudit-Research

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  RESOURCE_INDEX.md  ROADMAP.md  SECURITY.md  environment.gpu-cu128.yml  environment.yml  pyproject.toml  resource-index.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
analysis/: bootstrap_ci.py
configs/: README.md
docs/: CONTRIBUTING.md  README.md  README.zh-CN.md  RESOURCE_INDEX.md  ROADMAP.md  SECURITY.md  admitted-results-summary.md  asset-registry-local-api.md  brand-assets.md  claude-report-4-9-review.md  codex-autonomous-agent-prompt.md  codex-roadmap-execution-prompt.md  command-reference.md  competition-defense-qa.md  competition-evidence-pack.md  competition-innovation-summary.md  comprehensive-progress.md  data-and-assets-handoff.md  download-naming-policy.md  draft-sync-note-2026-04-14.md  environment.md  final-candidate-research-boundary-audit.md  final-nonblocking-gap-check-2026-04-14.md  future-phase-e-intake.md  getting-started.md  github-collaboration.md  github-settings-baseline.md  handoff.md  history-rewrite-audit.md  leader-research-ready-summary.md  licensing.md  local-api.md  mainline-narrative.md  mentor-strict-reproduction-plan.md  mia-defense-execution-checklist.md  mia-defense-research-index.md  next-run-intake-index.md  postmortem-2026-06-22-power-outage.md  pre-submit-signoff-2026-04-14.md  recon-artifact-replay-guidance.md  (+16 more)
experiments/: README.md
legacy/: 2026-04-15-P0-P3-completed-roadmap.md  2026-04-15-competition-sprint-roadmap-archived.md  metrics.json  roc_curve.csv  test_local_api.py
references/: README.md
scripts/: README.md  audit_clid_threshold_compatibility.py  audit_local_storage.py  audit_variation_query_contract.py  batch_eval_sweep.py  batch_smp_lora_sweep.py  bootstrap_research_env.py  build_claim_gate_recode_packet.py  build_e2_false_promotion_pilot.py  build_secmi_pia_adaptive_comparability_board.py  catalog_checkpoints.py  check_e2_freeze_preflight.py  check_e2_public_sources.py  check_markdown_links.py  check_paper_release_packet.py  check_public_surface.py  collect_h2_img2img_response_cache.py  compare_clid_control_packets.py  discover_response_contract_packages.py  e3_eval_existing.py  e3_train_and_eval.py  evaluate_h2_response_cache.py  evaluate_report_correctness_faults.py  evaluate_smp_lora_defense.py  export_admitted_evidence_bundle.py  export_false_promotion_review_bundle.py  export_paper_supplement.py  export_recon_product_evidence_card.py  h1_channel_knockout_cifar100.py  h1_fine_grid_cifar100.py  h1_fine_grid_ddim.py  h1_mechanistic_ddim.py  h2_score_vector_sidecar.py  launch_dpdm_shadow_sequence.ps1  launch_dpdm_shadow_sequence_after_pid.ps1  launch_dpdm_target_and_shadows.ps1  launch_dpdm_training.ps1  launch_gsa_shadows_after_pid.ps1  launch_gsa_training.ps1  launch_gsa_training_sequence.ps1  (+83 more)
tests/: README.md  helpers.py  test_aggregate_false_promotion_external_review.py  test_attack_registry.py  test_audit_local_storage.py  test_audit_variation_query_contract.py  test_blackbox_report.py  test_build_corrected_protocol_cli.py  test_cdi_internal_canary.py  test_check_paper_release_packet.py  test_check_public_surface.py  test_cli_module_entrypoint.py  test_clid_bridge_contract.py  test_clid_candidate_review.py  test_clid_control_attribution.py  test_clid_prompt_perturbation.py  test_clid_prompt_text_review.py  test_clid_score_schema.py  test_clid_smoke.py  test_clid_threshold_audit.py  test_collect_h2_img2img_response_cache_script.py  test_copymark_laion_mi.py  test_corrected_protocol.py  test_corrected_training_entrypoint.py  test_corrected_training_entrypoint_behavior.py  test_crossbox_pairboard.py  test_dit_runner.py  test_dpdm_launch_portability.py  test_evaluate_h2_response_cache_script.py  test_exact_resume_contract.py  test_export_admitted_evidence_bundle.py  test_export_recon_product_evidence_card.py  test_extract_h1_confirmatory_features_cli.py  test_graybox_triscore_canary.py  test_gsa_adapter.py  test_gsa_influence.py  test_gsa_observability_adapter.py  test_h1_evidence_contract.py  test_h1_extraction.py  test_h2_adapter.py  (+64 more)
tools/gsa-next-run/: README.md  pyproject.toml
tools/gsa-next-run/minimal/: run_example.ps1
tools/pia-next-run/: README.md  pyproject.toml  run.ps1
tools/pia-next-run/minimal/: run_example.ps1
tools/pia-next-run/minimal/config/: run_config.json
tools/pia-next-run/minimal/member-split-root/: hello.txt
tools/pia-next-run/src/pia_next_run/: cli.py  gate.py  gitinfo.py  hashing.py  model.py  util.py
workspaces/: 2026-04-17-g1a-bounded-gpu-review.md  2026-04-17-g1a-post-bm0-next-hypothesis-scoping.json  2026-04-18-x90-blocker-tmiadm-512-sample-gap.md  (+3 more)
(+1982 files in other folders)
