[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffaudit"
version = "0.1.0"
description = "Privacy risk auditing system for diffusion models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DiffAudit Team" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
keywords = ["diffusion-models", "membership-inference", "privacy-auditing", "reproducibility"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]

[project.scripts]
diffaudit = "diffaudit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
