[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffaudit"
version = "0.1.0"
description = "Privacy risk auditing system for diffusion models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DiffAudit Team" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
keywords = ["diffusion-models", "membership-inference", "privacy-auditing", "reproducibility"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]

[project.scripts]
diffaudit = "diffaudit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["legacy", "external", "third_party", "Download", ".git", ".venv", "venv"]
addopts = "-ra --tb=short --strict-markers"
markers = [
  "slow: slow tests (deselect with '-m \"not slow\"')",
  "gpu: tests requiring CUDA GPU (deselect with '-m \"not gpu\"')",
  "smoke: fast smoke/contract tests for CI pre-merge",
  "inference: quick inference-only tests (no training)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort (import ordering)
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "PERF",  # perflint
]
ignore = [
  "SIM108", # if/else → ternary (style, not bug)
  "PERF203", # try-except in loop (PyTorch patterns)
]
isort.known-first-party = ["diffaudit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
  "legacy/",
  "external/",
  "third_party/",
  "Download/",
  "workspaces/",
  "training/",
]
