[project]
name = "gsa-next-run"
version = "0.1.0"
description = "GSA next-run intake gate: validate inputs and emit manifest+provenance JSON."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gsa-next-run = "gsa_next_run.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

